# williams_framework

./: .env.example  .gitignore  PHASE-0-COMPLETE.md  README.md  coverage.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/core/: config.py  exceptions.py  id_generator.py  models.py  telemetry.py  telemetry.py.bak  types.py  video_models.py
app/intelligence/: embeddings.py
app/pipeline/: __init__.py  cli.py  etl.py
app/plugins/: prompts.py  registry.py
app/presentation/: app.py  navigation.py  search_cache.py  state.py  streamlit_app.py
app/provenance/: __init__.py  agent_protocol.py  tracker.py
app/queue/: __init__.py  job_manager.py
app/repositories/: minio_repository.py  neo_repository.py  postgres_repository.py  qdrant_repository.py  redis_repository.py
app/services/: citation_service.py  content_service.py  digest_service.py  entity_linking_service.py  export_service.py  graph_reasoning_service.py  library_service.py  maintenance_service.py  relation_extraction_service.py  search_service.py
app/workers/: __init__.py  celery_app.py
config/: ai_services.yml
config/prompts/: summarize.prompt
docs/: ADVANCED-VIDEO-GENERATION.md  AGENT-TO-AGENT-PROVENANCE-PROTOCOL.md  ARCHITECTURE.md  AUDIT-SUMMARY-2025.md  BIDIRECTIONAL-PLUGIN-ARCHITECTURE.md  BUGS-FOUND-2025-10-12.md  CLOUD-AGNOSTIC-AI-ARCHITECTURE.md  COVERAGE-IMPROVEMENT-SUMMARY.md  CREATOR-ASSISTANT-BRIEF.md  FASTAPI-IMPLEMENTATION-SUMMARY.md  FASTAPI-INGESTION-ARCHITECTURE.md  FASTAPI-VISUAL-ARCHITECTURE.md  FINAL-TEST-RESULTS-2025-10-14.md  GPT5-COLLABORATION-RESPONSE.md  GPT5-COLLABORATION-SUMMARY.md  GPT5-SYNC-MESSAGE.md  IMPLEMENTATION-SUMMARY-2025.md  IMPLEMENTATION-SUMMARY.md  INDEX.md  INTEGRATION-EXAMPLES.md  MIGRATION-QDRANT-MINIO.md  NEO4J-DECISION-SUMMARY.md  NEO4J-PROVENANCE-ANALYSIS.md  NEO4J-VS-CURRENT-COMPARISON.md  PHASE-0-COMPLETE.md  PHASE-0-PROGRESS.md  PHASE-0.5-COMPLETE.md  PROJECT-AUDIT-2025.md  PROVENANCE-VIDEO-GENERATION.md  README.md  SESSION-COMPLETE-2025-10-12.md  SESSION-PROGRESS-2025-10-09.md  SESSION-REPORT-2025-10-14.md  SESSION-SUMMARY-PHASE-2-COMPLETE.md  SESSION-SUMMARY-SPRINT-2-COMPLETE.md  SPRINT-5-NEO4J-TDD-PLAN.md  SPRINT-5-TDD-PLAN.md  SPRINT-6-LINKING-RELATIONS-TDD-PLAN.md  SPRINT-6-UPDATED.md  SPRINT-7-FASTAPI-VIZ-TDD-PLAN.md  (+36 more)
examples/: mixed_model_usage.py  tier_system_demo.py
tests/: conftest.py
(+161 files in other folders)
