[tool.poetry]
name = "williams-librarian"
version = "0.1.0"
description = "Personal AI Research Assistant for the Williams Framework"
authors = ["Kevin Williams <kwilliams@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
# Database
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
qdrant-client = "^1.7.0"
minio = "^7.2.0"
# AI/ML
openai = "^1.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
spacy = "^3.7.0"
networkx = "^3.2.0"
# ETL
httpx = "^0.27.0"
trafilatura = "^1.6.0"
yt-dlp = "^2024.3.0"
pypdf = "^4.0.0"
beautifulsoup4 = "^4.12.0"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.2"
# UI
streamlit = "^1.30.0"
plotly = "^5.18.0"
pyvis = "^0.3.2"
# Utilities
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
pytest-timeout = "^2.2.0"
hypothesis = "^6.92.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
black = "^23.12.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (real DBs)",
    "e2e: End-to-end tests (full workflows)",
    "ui: Streamlit or UI tests (headless rendering)",
    "slow: Tests that take > 5 seconds",
    "requires_api: Tests that call OpenAI API",
    "requires_db: Tests that need database",
]
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
    "--tb=short",
]
asyncio_mode = "auto"
timeout = 300

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
